--- a/CIS 2.5
+++ b/CIS 2.5
@@ -1,6 +1,6 @@
 function Test-WDAC {
     param (
-        [string]$appName = "C:\Program Files (x86)\Recover Keys\RecoverKeys.exe"
+        [string]$appName = "C:\Program Files (x86)\Magical Jelly Bean\Keyfinder.exe"
     )
 
     try {
@@ -38,7 +38,7 @@ function Setup-WDAC {
 
 function Enable-WDAC {
     param (
-        [string]$CIPFilePath = "C:\Users\Vagrant\RecoveryKeys.cip"
+        [string]$CIPFilePath = "C:\Users\Vagrant\test.cip"
     )
 
     try {
